--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@
 .navlist li a:active{
     border-radius: 45px;
     background-color: rgb(230, 83, 60);
+    padding: 8px 20px 8px 20px;
 }
 .tag-container{
     box-sizing: border-box;
@@ -153,7 +154,33 @@
 
 
 @media screen and (max-width:576px) {
+    #banner{
+        padding: 50px 20px 50px 20px;
+    }
     .display{
         flex-direction: column;
+        gap: 45px;
+    }
+    .dropdown{
+        overflow: hidden;
+        background-image: url("./images/dropdown-icon.webp");
+    }
+    .navlist{
+        display: none;  
+    }
+    .dropdown:active>.navlist>a{
+        background-color: white;
+        border: 1px solid rgb(176, 168, 168);
+        border-radius: 20px;
+        display: block;
+        float: right;
+    }
+    .button{
+        display: flex;
+        gap: 14px;
+    }
+    .fitness, .banner-text, .button , .banner-img{
+        text-align: left;
+        margin: 0;
     }
 }
