--- a/style.css
+++ b/style.css
@@ -380,6 +380,7 @@ footer hr{
     .navbar{
         width: 100%;
         justify-content: space-between;
+        gap: 100px;
     }
     #dropdown-menu{
         margin-left: -150px;
@@ -396,10 +397,13 @@ footer hr{
     #dropdown-menu:hover .navlist {
         display: flex;
         flex-direction: column;
-        background-color: white;
+        background-color: transparent;
         border: 1px solid rgb(176, 168, 168);
         border-radius: 20px;
-        float: right;
+        float: left;
+        padding: 0;
+        margin: 0;
+        gap: 5px;
     }
     #dropdown-menu:hover .navlist li{
         margin: 0;
@@ -409,6 +413,7 @@ footer hr{
         background-color: rgb(230, 83, 60);
         padding: 8px 20px 8px 20px;
         margin: 0;
+        
     }
     .button{
         display: flex;
