--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ footer hr{
         background-color: rgb(230, 83, 60);
         padding: 8px 20px 8px 20px;
         margin: 0;
-        
+        width: 100%;
     }
     .button{
         display: flex;
