--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ main{
 #exercise div.display{
     flex-direction: row;
     height: 288px;
-    width: 80%;
+    width: 69%;
 }
 #exercise div.display  p{
     font-size: 1rem;
@@ -363,6 +363,9 @@ footer hr{
 
 
 @media screen and (max-width: 576px) {
+    .body{
+        width: 100%;
+    }
     #banner{
         padding: 50px 20px 50px 20px;
     }
