--- a/style.css
+++ b/style.css
@@ -410,8 +410,8 @@ footer hr{
         gap: 5px;
     }
     #dropdown-menu:hover .navlist li{
-        margin: 0;
-        width: 100%;
+        margin: 5px;
+        padding: 10px;
     }
     #dropdown-menu:hover .navlist li a{
         border-radius: 16px;
@@ -421,7 +421,17 @@ footer hr{
     }
     .button{
         display: flex;
-        justify-content: space-between; 
+        justify-content: flex-start;
+        align-items: center;
+        gap: 10px;
+    }
+    .button button{
+        padding-left: 0;
+        margin: 0;
+    }
+    #banner .btn-primary, #banner .download-btn{
+        padding: 10px auto;
+        font-size: 1rem;
     }
     .banner-text{
         font-size: 4.5rem;
