--- a/style.css
+++ b/style.css
@@ -326,6 +326,9 @@ input[type=submit]{
     top: -80px;
     left: 30px;
 }
+.trainer-intro p{
+    color: white;
+}
 footer{background-color:rgb(58, 58, 58) ;}
 #footer{
     justify-content: space-around;
@@ -429,6 +432,9 @@ footer hr{
         padding-left: 0;
         margin: 0;
     }
+    .button button a{
+        padding: 16px 20px;
+    }
     #banner .btn-primary, #banner .download-btn{
         padding: 10px auto;
         font-size: 1rem;
@@ -441,11 +447,20 @@ footer hr{
         margin: 0;
     }
     #banner-img{
-        padding-left: 90px;
+        padding-left: 50px;
         height: 530px;
+        width: 90%;
+    }
+    #banner-img img{
+        width: 90%;
     }
     #banner-img .box-1{
-       margin-left: -55px;
+       margin-left: -100px;
+       margin-top: 70px;
+       width: 50%;
+    }
+    #banner-img .box-2{
+        margin-left: 50px;
     }
     #habit{
         text-align: center;
@@ -475,13 +490,19 @@ footer hr{
         display: none;
     }
     .img-box-1 ,.img-box-5{
-        width: 55%;
+        width: 52%;
     }
     .img-box-2, .img-box-4{
-        width: 45%;
+        width: 48%;
     }
-    .pic-2 >p , .pic-4 >p{
+    #exercise div.display  p{
+        font-size: 0.8rem;
+    }
+    .pic-1 >p,.pic-2> p, .pic-5> p{
         left: 10px;
+    }
+    .pic-4> p{
+        left: 0;
     }
     #bmi form div.display{
         flex-direction: row;
@@ -505,20 +526,21 @@ footer hr{
         height: 380px;
     }
     .trainers{
-        width: 82%;
-        margin-left: 50px;
+        width: 90%;
+        margin-left: 20px;
     }
     .trainer-1 , .trainer-4{
         display: none;
     }
     .trainers img{
-        width: 350px;
+        width: 90%;
         height: 350px;
     }
     .trainer-intro{
         top: -100px;
         left: 50px;
     }
+   
 }
 
 
