--- a/style.css
+++ b/style.css
@@ -192,10 +192,13 @@ main{
 #run img{
     border-radius: 18px;
 }
+#exercise{
+    padding: 48px 70px;
+}
 #exercise p{
     font-weight: 500;
     font-size: 0.875rem;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 #exercise div.display{
     flex-direction: row;
@@ -223,7 +226,7 @@ main{
 .pic-1,.pic-2, .pic-3, .pic-4, .pic-5, .pic-6{
     height: 288px;
     position: relative;
-    top: -309px;
+    top: -308px;
 }
 .pic-1{
     background: rgba(6, 255, 210, 0.5);
